--- a/src/components/RecipeList.css
+++ b/src/components/RecipeList.css
@@ -280,6 +280,12 @@
   aspect-ratio: 4 / 3;
 }
 
+@media (prefers-color-scheme: dark) {
+  .recipe-image {
+    background: #2c2c2e;
+  }
+}
+
 .recipe-image img {
   width: 100%;
   height: 100%;
